[package]
name = "cargo-acj"
version = "0.1.1"
edition = "2024"
authors = ["k-ohnuma <ohnumaaa@gmail.com>"]
license = "MIT"
repository = "https://github.com/k-ohnuma/cargo-acj"
homepage = "https://github.com/k-ohnuma/cargo-acj"
readme = "readme.md"
keywords = ["cli", "procon"]
categories = ["command-line-utilities"]
description = "Automatically test AtCoder sample cases"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4", features = ["derive"] }
colored = "3.0.0"
reqwest = {version = "0.12.20", features = ["blocking"]}
scraper = "0.23.1"
wait-timeout = "0.2.1"
